--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: python
 python:
   - 3.3
   - 3.4
+  - 3.5
 install:
-  - pip install -r requirements-test.txt --use-mirrors
-  - pip install -r requirements.txt --use-mirrors
+  - pip install -r requirements-test.txt
+  - pip install -r requirements.txt
 before_script:
   - mkdir -p tests/_coverage
 script:
